--- a/WebApp/Pages/Shared/Edit.cshtml
+++ b/WebApp/Pages/Shared/Edit.cshtml
@@ -3,6 +3,13 @@
 }
 
 <div class="block-reg background-white">
+
+    <div>
+        <form method="get" asp-controller="AccountManager" asp-action="MyPage">
+            <input class="enter_submit" type="submit" value="Назад" />
+        </form>
+    </div>
+
 	<form method="post" asp-controller="Edit" asp-action="Update">
         <div>
             <div class="mrgn">
