--- a/WebApp/Pages/Shared/PartialFriends.cshtml
+++ b/WebApp/Pages/Shared/PartialFriends.cshtml
@@ -1,25 +1,29 @@
-﻿@model WebApp.ViewModels.SearchViewModel
+﻿@using WebApp.AccountManager
+@model List<User> 
 @{
 }
 
-<div class="block-reg background-white">
-
-    @if (Model.UserList.Count != 0)
+<span class="block-reg">
+    @if(Model != null)
+    @if (Model.Count != 0)
     {
 
-        @foreach (var user in @Model.UserList)
+        @foreach (var user in @Model)
         {
-            <div>
+                <img src="@user.Image" class="friend-image" />
                 <label>@user.GetFullName()</label>
-                @if (!@user.IsFriendWithCurrent)
-                {
-                    <form asp-controller="AccountManager" asp-action="AddFriend" asp-route-id="@user.Id" method="post">
-                        <button type="submit" class="btn btn-sm btn-primary">
-                            Добавить в друзья
-                        </button>
-                    </form>
-                }
-            </div>
+
+                <form asp-controller="AccountManager" asp-action="Chat" asp-route-id="@user.Id" method="post">
+                    <button type="submit" class="btn btn-sm btn-primary min-width-but">
+                        Чат
+                    </button>
+                </form>
+
+                <form asp-controller="AccountManager" asp-action="DeleteFriend" asp-route-id="@user.Id">
+                    <button type="submit" class="btn btn-sm btn-primary min-width-but">
+                        Удалить из друзей
+                    </button>
+                </form>
         }
     }
     else
@@ -30,4 +34,4 @@
     }
 
 
-</div>
+</span>
